# multi-rust-lambda

./: package.json  serverless-compose.yml  serverless-rust.js  serverless.yml
.github/workflows/: build-deploy.yml
hello/: Cargo.toml  serverless.yml
hello/src/: main.rs
world/: Cargo.toml  serverless.yml
world/src/: main.rs
