[package]
name = "hello"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.4.1"
serde = "1.0.130"
serde_json = "1.0.69"
openssl = { version = "0.10", features = ["vendored"] }


[[bin]]
name = "bootstrap"
path = "src/main.rs"