[package]
name = "world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda_runtime = "0.4.1"
serde = "1.0.130"
serde_json = "1.0.69"
aws_lambda_events = "0.5"
